# sybil

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/diagnosis/: anomalies.py  pipeline.py  profiler.py  schemas.py  seasonality.py  stationarity.py
src/forecasting/: base.py  conformal.py  ets_model.py  prophet_model.py  schemas.py
tests/integration/: test_pipeline.py
tests/unit/: test_anomalies.py  test_conformal.py  test_ets_model.py  test_profiler.py  test_prophet_model.py  test_stationarity_seasonality.py
